--- a/PersonalFinance/src/main/webapp/css/dashboard.css
+++ b/PersonalFinance/src/main/webapp/css/dashboard.css
@@ -363,13 +363,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px; /* Space between the charts */
-    margin: 20px auto; /* Center the charts container */
+    gap: 20px; 
+    margin: 20px auto; 
 }
 
 .chart-box {
-    width: 30%; /* Adjust the size of each chart */
-    max-width: 250px; /* Set a max width for responsiveness */
+    width: 30%; 
+    max-width: 250px; 
 }
 
 .goal-completion-box {
@@ -397,27 +397,83 @@ body {
 
 .filter-container {
     display: flex;
-    justify-content: space-between; /* Space between the filter and button */
+    justify-content: space-between; 
     align-items: center;
-    margin-bottom: 20px; /* Add spacing below the filter section */
+    margin-bottom: 20px; 
 }
 
 .filter-form {
-    margin: 0; /* Remove default margins */
+    margin: 0; 
     display: flex;
     align-items: center;
-    gap: 10px; /* Space between label and dropdown */
+    gap: 10px; 
 }
 
 .dropdown-filter {
-    padding: 5px 10px; /* Add padding for better appearance */
-    border-radius: 5px; /* Rounded edges */
-    border: 1px solid var(--color-input-border); /* Match theme */
+    padding: 5px 10px; 
+    border-radius: 5px; 
+    border: 1px solid var(--color-input-border); 
 }
 
 .add-new-account {
-    padding: 10px 20px; /* Ensure consistent padding */
-    margin: 0; /* Remove default margin */
+    padding: 10px 20px; 
+    margin: 0; 
 }
 
+.stats-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+}
+
+.stat-box {
+    background-color: var(--color-input-bg);
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 45%;
+}
+
+.stat-box h3 {
+    margin-bottom: 1rem;
+    color: var(--color-primary);
+}
+
+.stat-box p {
+    font-size: 2rem;
+    color: var(--color-text-dark);
+}
+
+
+.btn-verify {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.btn-unverify {
+    background-color: #F44336; 
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.btn-edit {
+    background-color: #2196F3;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.btn-delete {
+    background-color: #FF9800;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
 
